--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,23 @@
+html {
+  background: url(/images/bg.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100%;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  justify-content: center;
+  align-items: center;
+  font-family: "Nunito", sans-serif;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 #alertBox {
   width: fit-content;
   display: flex;
@@ -5,10 +25,64 @@
   align-items: center;
   padding: 1rem;
   margin: 1rem auto;
-  border: black;
-  border-radius: 1 px;
-  border-style: solid;
+  background-color: #93c5fd;
   max-width: 50%;
+}
+
+header h1 {
+  text-align: center;
+  margin: 1rem;
+}
+
+label {
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+input {
+  padding: 0.6rem 1rem;
+  margin: 1rem auto;
+  border: 2px solid black;
+  border-radius: 0.5rem;
+  width: 100%;
+  max-width: 150px;
+  text-align: center;
+}
+
+#btn {
+  background: black;
+  border: none;
+  color: #fff;
+  padding: 0.7rem 1rem;
+  border-radius: 0.5rem;
+  font-size: large;
+  cursor: pointer;
+  outline: #fff;
+  margin: auto;
+  display: block;
+}
+
+#output {
+  font-size: x-large;
+  font-weight: 600;
+  margin: 2rem 0;
+  text-align: center;
+}
+
+img {
+  max-width: 250px;
+}
+
+h1,
+h3 {
+  text-align: center;
+}
+
+.container {
+  text-align: center;
+}
+
+#date-of-birth {
+  margin: 1rem;
 }
 
 #footer ul {
