--- a/styles.css
+++ b/styles.css
@@ -61,13 +61,20 @@ input {
   display: block;
 }
 
+#gif {
+  margin-top: 1rem;
+  display: none;
+}
+
 #output {
   font-size: x-large;
   font-weight: 600;
   margin: 2rem 0;
   text-align: center;
+  max-width: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
-
 img {
   max-width: 250px;
 }
@@ -81,7 +88,7 @@ h3 {
   text-align: center;
 }
 
-#date-of-birth {
+#date {
   margin: 1rem;
 }
 
